--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,6 +1,6 @@
 # ==== CONFIGURE =====
 # Use a Node 16 base image
-FROM node:16-alpine 
+FROM node:15-alpine 
 # Set the working directory to /app inside the container
 WORKDIR /app
 # Copy app files
@@ -11,9 +11,10 @@ RUN npm ci
 # Build the app
 RUN npm run build
 # ==== RUN =======
-# Set the env to "production"
-ENV NODE_ENV production
+
 # Expose the port on which the app will be running (3000 is the default that `serve` uses)
 EXPOSE 3000
 # Start the app
-CMD [ "npx", "serve", "build" ]
+RUN npm install serve -g
+COPY . .
+CMD ["serve","-s","build"]
