--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - 80:3000
+    environment: 
+      - REACT_APP_MOVIE_SERVICE_URI=http://movieservice:3002/rest
+      - REACT_APP_SHOP_SERVICE_URI=http://movieservice:3001/rest
+      - REACT_APP_USER_SERVICE_URI=http://movieservice:3003/rest
   movieservice:
     build:
       context: ./services/uniflix-movieservice
