--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -11,8 +11,9 @@ RUN npm ci
 # Build the app
 RUN npm run build
 # ==== RUN =======
-
+# Set the env to "production"
+ENV NODE_ENV production
 # Expose the port on which the app will be running (3000 is the default that `serve` uses)
 EXPOSE 3000
-
-CMD ["npm","run","start"]
+# Start the app
+CMD [ "npx", "serve", "build" ]
