--- a/webapp/nginx.conf
+++ b/webapp/nginx.conf
@@ -1,6 +1,17 @@
 server_tokens off;
 server {
     listen       80;
+    server_name  loreand.it www.loreand.it;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name  loreand.it www.loreand.it;
+
+    ssl_certificate /etc/ssl/certs/my-site.cer;
+    ssl_certificate_key /etc/ssl/private/my-site.key;
+    
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
